force-app/main/default/objects/Account/fields/AccountId_number_value__c.field-meta.xml
<CustomField>
    <fullName>AccountId_number_value__c</fullName>
    <label>AccountId number value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>