force-app/main/default/objects/Account/fields/External_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Account_Name__c</fullName>
    <externalId>true</externalId>
    <label>External Account Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>