force-app/main/default/objects/Account/fields/Parent_Mativ_Site__c.field-meta.xml
<CustomField>
    <fullName>Parent_Mativ_Site__c</fullName>
    <label>Parent Mativ Site</label>
    <length>25</length>
    <type>Text</type>
</CustomField>