force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>External_Account_Name__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Business_Unit__c</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>CurrencyIsoCode__c</columns>
    <columns>ACCOUNT.SALES</columns>
    <columns>Business_Segment__c</columns>
    <columns>System__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>